g2sp init tailwind css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<g2sp-nx-welcome></g2sp-nx-welcome> <router-outlet></router-outlet>
+<div class="flex flex-col justify-center">
+    <img [src]="'assets/logo-g2sp.svg'" alt="logo">
+    <p>
+        Work in progress...
+        Coming soon.
+    </p>
+    <router-outlet></router-outlet>
+</div>
