--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<div class="flex flex-col justify-center">
-    <img [src]="'assets/logo-g2sp.svg'" alt="logo">
+<div class="flex flex-col justify-center items-center">
+    <img [src]="'assets/logo-g2sp.svg'" class="w-[800px]" alt="logo">
+
     <p>
-        Work in progress...
-        Coming soon.
+        Work in progress.
+        Coming soon !
     </p>
     <router-outlet></router-outlet>
 </div>
