--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,3 @@
-<div class="flex flex-col justify-center items-center">
-    <img [src]="'assets/logo-g2sp.svg'" class="w-[800px]" alt="logo">
+<g2sp-header></g2sp-header>
+<router-outlet></router-outlet>
 
-    <p>
-        Work in progress.
-        Coming soon !
-    </p>
-    <router-outlet></router-outlet>
-</div>
