--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,27 @@
+@use '@angular/material' as mat;
+@include mat.core();
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
+
 /* You can add global styles to this file, and also import other style files */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: 'Nunito', sans-serif; }
+
+
+
+$custom-typography: mat.define-typography-config(
+        $font-family: 'Nunito, sans-serif',
+);
+
+/* Appliquer la typographie par défaut aux composants Angular Material */
+@include mat.all-component-typographies($custom-typography);
+
+
+/* Configurer Tailwind pour utiliser Nunito */
+@layer base {
+  body {
+    font-family: 'Nunito', sans-serif;
+  }
+}
