--- a/src/app/header/header-item/header-item.component.html
+++ b/src/app/header/header-item/header-item.component.html
@@ -4,4 +4,6 @@
     [matRippleUnbounded]="false"
     (click)="onClickCategory(categoryName)"
     class="w-36 h-full flex justify-center items-center text-blue-600 hover:text-blue-500 transition duration-300 cursor-pointer"
->{{categoryName}}</div>
+>
+    {{ categoryName }}
+</div>
