--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,26 +6,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html, body { height: 100%; }
-body { margin: 0; font-family: 'Nunito', sans-serif; }
-
-
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: 'Nunito', sans-serif;
+}
 
 $custom-typography: mat.define-typography-config(
-        $font-family: 'Nunito, sans-serif',
+    $font-family: 'Nunito, sans-serif',
 );
 
 /* Appliquer la typographie par défaut aux composants Angular Material */
 @include mat.all-component-typographies($custom-typography);
 
 .mat-ripple-element {
-  background-color: rgba(255, 255, 255, 0.2); /* Couleur (rouge avec 50% de transparence) */
-  /* Autres styles personnalisés pour l'effet matRipple si nécessaire */
+    background-color: rgba(
+        255,
+        255,
+        255,
+        0.2
+    ); /* Couleur (rouge avec 50% de transparence) */
+    /* Autres styles personnalisés pour l'effet matRipple si nécessaire */
 }
 
 /* Configurer Tailwind pour utiliser Nunito */
 @layer base {
-  body {
-    font-family: 'Nunito', sans-serif;
-  }
+    body {
+        font-family: 'Nunito', sans-serif;
+    }
 }
