Start of services page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,6 @@
-<mat-toolbar class="flex items-center justify-between px-4 py-2 h-16">
+<mat-toolbar
+    class="flex items-center justify-between px-4 py-2 h-16 shadow-gray-50 shadow-lg"
+>
     <div>
         <img [src]="'assets/logo-g2sp.svg'" class="h-12 mr-8" alt="logo" />
     </div>
