--- a/src/app/page/temp-app/services/services.component.html
+++ b/src/app/page/temp-app/services/services.component.html
@@ -1,1 +1,60 @@
-<p>services works!</p>
+<div class="flex justify-center items-center flex-col">
+    <div class="flex flex-col relative">
+        <img
+            [src]="'assets/secu5croped.jpg'"
+            alt="sécurité"
+            class="shadow-gray-400 shadow-2xl"
+        />
+
+        <p
+            class="text-3xl font-bold text-gray-100 absolute bottom-28 left-6 text-center whitespace-break-spaces"
+        >
+            Prenez un temps d’avance sur le prochain événement cyber-disruptif
+        </p>
+    </div>
+
+    <div class="w-full px-24 mt-12 text-lg whitespace-break-spaces">
+        <!-- Section -->
+
+        <div class="text-2xl text-center text-blue-700">POURQUOI ?</div>
+
+        <!-- ligne de pictos -->
+        <div class="w-full mt-4 h-36 flex justify-around">
+            <!-- picto section -->
+            <div class="w-72 p-8 text-center">
+                Des collaborateurs de plus en plus nombreux à utiliser
+                massivement des outils informatiques
+            </div>
+
+            <div class="w-72 p-8 text-center">
+                Une culture souvent fragile de la sécurité informatique de
+                nombreux collaborateurs
+            </div>
+
+            <div class="w-72 p-8 text-center">
+                Des menaces cyber multiformes et croissantes, qui ciblent
+                données, opérations et réputation
+            </div>
+
+            <div class="w-72 p-8 text-center">
+                Un niveau de préparation incertain et hétérogène aux
+                défaillances de vos systèmes critiques
+            </div>
+        </div>
+    </div>
+</div>
+<!-- <ul>
+    <li>
+        Des collaborateurs de plus en plus nombreux à utiliser massivement des outils informatiques
+    </li>
+    <li>
+        Une culture souvent fragile de la sécurité informatique de nombreux collaborateurs
+    </li>
+    <li>
+        Des menaces cyber multiformes et croissantes, qui ciblent données, opérations et réputation
+    </li>
+    <li>
+        Un niveau de préparation incertain et hétérogène aux défaillances de vos systèmes critiques
+    </li>
+</ul>
+-->
