First draw services page

--- a/src/app/page/temp-app/temp-app.component.html
+++ b/src/app/page/temp-app/temp-app.component.html
@@ -1,1 +1,4 @@
-<g2sp-header></g2sp-header> <router-outlet></router-outlet>
+<g2sp-header></g2sp-header>
+<div class="flex justify-center">
+    <router-outlet></router-outlet>
+</div>
