--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,3 +38,7 @@ $custom-typography: mat.define-typography-config(
         font-family: 'Nunito', sans-serif;
     }
 }
+
+.material-icons.color_blue {
+    color: #0369a1;
+}
