--- a/src/app/header/header-item/header-item.component.html
+++ b/src/app/header/header-item/header-item.component.html
@@ -3,7 +3,7 @@
     [matRippleCentered]="true"
     [matRippleUnbounded]="false"
     (click)="handleClickCategory(categoryName)"
-    class="w-36 h-full flex justify-center items-center text-blue-600 hover:text-blue-500 transition duration-300 cursor-pointer"
+    class="w-36 h-full flex justify-center items-center text-blue-600 hover:text-blue-500 transition duration-300 cursor-pointer font-bold"
 >
     {{ categoryName }}
 </div>
