--- a/src/app/page/temp-app/services/services.component.html
+++ b/src/app/page/temp-app/services/services.component.html
@@ -1,60 +1,36 @@
-<div class="flex justify-center items-center flex-col">
-    <div class="flex flex-col relative">
+<div class="flex justify-center items-center flex-col w-[75vw] px-24">
+    <div class="flex flex-col relative mt-8 w-full">
         <img
             [src]="'assets/secu5croped.jpg'"
             alt="sécurité"
-            class="shadow-gray-400 shadow-2xl"
+            class="shadow-xl shadow-gray-200"
         />
 
         <p
-            class="text-3xl font-bold text-gray-100 absolute bottom-28 left-6 text-center whitespace-break-spaces"
+            class="text-3xl font-bold text-white absolute bottom-28 left-6 text-center whitespace-break-spaces"
         >
             Prenez un temps d’avance sur le prochain événement cyber-disruptif
         </p>
     </div>
 
     <div class="w-full px-24 mt-12 text-lg whitespace-break-spaces">
-        <!-- Section -->
+        <div class="text-3xl font-bold text-center text-blue-600">
+            POURQUOI ?
+        </div>
 
-        <div class="text-2xl text-center text-blue-700">POURQUOI ?</div>
-
-        <!-- ligne de pictos -->
-        <div class="w-full mt-4 h-36 flex justify-around">
-            <!-- picto section -->
-            <div class="w-72 p-8 text-center">
-                Des collaborateurs de plus en plus nombreux à utiliser
-                massivement des outils informatiques
-            </div>
-
-            <div class="w-72 p-8 text-center">
-                Une culture souvent fragile de la sécurité informatique de
-                nombreux collaborateurs
-            </div>
-
-            <div class="w-72 p-8 text-center">
-                Des menaces cyber multiformes et croissantes, qui ciblent
-                données, opérations et réputation
-            </div>
-
-            <div class="w-72 p-8 text-center">
-                Un niveau de préparation incertain et hétérogène aux
-                défaillances de vos systèmes critiques
-            </div>
+        <div class="w-full mt-16 h-36 flex justify-around">
+            <ng-container *ngFor="let section of sections">
+                <div class="flex flex-col">
+                    <div class="text-center">
+                        <mat-icon class="text-blue-500 scale-[300%]">{{
+                            section.iconName
+                        }}</mat-icon>
+                    </div>
+                    <div class="w-72 p-8 text-center">
+                        {{ section.description }}
+                    </div>
+                </div>
+            </ng-container>
         </div>
     </div>
 </div>
-<!-- <ul>
-    <li>
-        Des collaborateurs de plus en plus nombreux à utiliser massivement des outils informatiques
-    </li>
-    <li>
-        Une culture souvent fragile de la sécurité informatique de nombreux collaborateurs
-    </li>
-    <li>
-        Des menaces cyber multiformes et croissantes, qui ciblent données, opérations et réputation
-    </li>
-    <li>
-        Un niveau de préparation incertain et hétérogène aux défaillances de vos systèmes critiques
-    </li>
-</ul>
--->
