draw services sections

--- a/src/app/component/services-section/services-section.component.html
+++ b/src/app/component/services-section/services-section.component.html
@@ -1,9 +1,17 @@
 <div class="text-lg whitespace-break-spaces">
-    <div class="text-3xl font-bold text-center text-blue-700">
+    <div
+        class="text-3xl font-bold text-blue-700"
+        [ngClass]="{
+            'text-left': alignTitle === 'left',
+            'text-center': alignTitle === 'middle'
+        }"
+    >
         {{ sectionTitle }}
     </div>
 
-    <div class="w-full h-36 flex justify-around">
-        <ng-content></ng-content>
+    <ng-content></ng-content>
+
+    <div class="w-full mt-16">
+        <mat-divider class="w-full"></mat-divider>
     </div>
 </div>
