--- a/src/app/page/temp-app/temp-app.component.html
+++ b/src/app/page/temp-app/temp-app.component.html
@@ -1,4 +1,4 @@
 <g2sp-header></g2sp-header>
-<div class="flex justify-center h-full">
+<div class="flex justify-center h-full max-w-[1600PX]">
     <router-outlet></router-outlet>
 </div>
