--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 @use '@angular/material' as mat;
 @include mat.core();
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
+@import 'material-icons/iconfont/material-icons.css';
 
 /* You can add global styles to this file, and also import other style files */
 @tailwind base;
