--- a/src/app/page/temp-app/temp-app.component.html
+++ b/src/app/page/temp-app/temp-app.component.html
@@ -1,4 +1,6 @@
 <g2sp-header></g2sp-header>
-<div class="flex justify-center h-full max-w-[1600PX]">
-    <router-outlet></router-outlet>
+<div class="mx-auto w-full h-full max-w-[1600PX]">
+    <div class="w-full">
+        <router-outlet></router-outlet>
+    </div>
 </div>
